feat: implementando endpoint para deletar propostas. Ajustes nas respostas de erro padrão do laravel,atualizando swagger
